tests/ui/consts/const-unwrap.stderr
error[E0080]: evaluation panicked: called `Option::unwrap()` on a `None` value
  --> $DIR/const-unwrap.rs:6:18
   |
LL | const BAR: i32 = Option::<i32>::None.unwrap();
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `BAR` failed here

error[E0080]: evaluation panicked: absolutely not!
  --> $DIR/const-unwrap.rs:9:18
   |
LL | const BAZ: i32 = Option::<i32>::None.expect("absolutely not!");
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `BAZ` failed here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
